fix(appointmentManagement): model and controller